# bili-maestro

./: .gitignore  Cargo.toml  README.md  config.example.toml
src/: config.rs  lib.rs  main.rs
src/api/: http.rs  mod.rs  ws.rs
src/bili/: client.rs  credential.rs  mod.rs  pre_processing.rs  urls.rs
src/command/: mod.rs  types.rs
src/source/: mod.rs  websocket.rs
