[package]
name = "bili-maestro"
version = "0.1.0"
edition = "2021"
description = "Bilibili live danmaku reader for song requests and video control"
license = "MIT"

[dependencies]
# Error handling
anyhow = "1.0.102"
futures-util = "0.3.32"
reqwest = "0.13.2"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = { version = "0.29.0" }
url = "2.5.8"
serde = "1.0.228"
serde_json = "1.0.149"
